making steady progress through the project. Completed every section before the work history. Will work on that table and then the contact information. After that I will review the read me objectives to make sure I meet MVP. The google font stretch goal has been completed

--- a/less/index.less
+++ b/less/index.less
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	border:1px solid grey;
+	// border:1px solid grey;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -61,11 +61,6 @@ html, body {
 
 @textfont:'Playfair Display', serif;
 
-/* General Style code goes here */
-h1{
-	font-size: xxx-large;
-	font-family: @textfont;
-}
 
 /* Nav Style code goes here */
 	nav{
@@ -74,6 +69,8 @@ h1{
 		padding:1% 0;
 		a{
 			margin-right: 2%;
+			text-decoration: none;
+			color:black;
 		}
 	}
 /* Header Style code goes here*/
@@ -85,10 +82,71 @@ h1{
 		padding:3%;
 		margin:2% 3%;
 		img{
-			max-width: 20%;
+			max-width: 40%;
 		}
+		hr{
+			margin:1% 5%;
+			border:1px solid grey;
+		}
+		h1{
+			font-size: xxx-large;
+			font-family: @textfont;
+		}
+		h3{
+			font-size: large;
+			font-family: @textfont;
+			padding: 0.5%;
+		}
+		p{
+			width: 60%;
+		}
+		button{
+			padding: 0.5% 1%;
+			border-radius: 8%;
+			color:white;
+			font-weight: bold;
+			border: 1px solid grey;
+			background:grey;
+			margin-top:1%
+		}
+
 	}
 /* aboutandskills code goes here */
+	#aboutandskills{
+		.anscontainer{
+			display: flex;
+			.about{
+				width: 50%;
+				justify-content: center;
+				h2{
+					font-size: x-large;
+					font-family: @textfont;
+				}
+				margin:1% 3%;
+				p{
+					line-height: 2;
+					padding-top: 4%;
+				}
+			}
+			.skills{
+				width: 50%;
+				justify-content: left;
+				h3{
+					font-size: large;
+					font-family: @textfont;
+					padding-bottom: 2%;
+				}
+				ul{
+					text-align: left;
+					li{
+						padding:3% 0;
+						border:0.5px solid grey;
+					}
+				}
+				padding:1% 4%;
+			}
+		}
+	}
 
 /* workhistory code goes here */
 
